modificacion sobre los enlaces y el scrolll

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Regístrate</a>
+                        <a class="nav-link" href="#section_10">Regístrate</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contáctanos</a>
+                        <a class="nav-link" href="#section_10">Contáctanos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Síguenos</a>
@@ -54,18 +54,17 @@
         <div class="card card-body col-12 col-lg-7 m-auto">
             <ul class="row">
                 <div class="col-12 col-lg-4">
-                    <li><a href="#">Cani-Tabs® Daily Multi</a></li>
-                    <li><a href="#">Cani-Tabs® Hip+Joint</a></li>
-                    <li><a href="#">Cani-Tabs® Omega3+DHA&EPA</a></li>
+                    <li><a class="nav-link" href="#section_2">Cani-Tabs® Daily Multi</a></li>
+                    <li><a class="nav-link" href="#section_3">Cani-Tabs® Hip+Joint</a></li>
+                    <li><a class="nav-link" href="#section_4">Cani-Tabs® Omega3+DHA&EPA</a></li>
                 </div>
                 <div class="col-12 col-lg-4">
-                    <li><a href="#">Cani-Tabs® Healthy Bones Ca+P</a></li>
-                    <li><a href="#">Cani-Tabs® Skin+Coat</a></li>
-                    <li><a href="#">Cani-Tabs® Immunity&Allergies</a></li>
-
+                    <li><a class="nav-link" href="#section_5">Cani-Tabs® Healthy Bones Ca+P</a></li>
+                    <li><a class="nav-link" href="#section_6">Cani-Tabs® Skin+Coat</a></li>
+                    <li><a class="nav-link" href="#section_7">Cani-Tabs® Immunity&Allergies</a></li>
                 </div>
                 <div class="col-12 col-lg-4">
-                    <li><a href="#">Cani-Tabs® UT Support</a></li>
+                    <li><a class="nav-link" href="#section_8">Cani-Tabs® UT Support</a></li>
                 </div>
             </ul>
         </div>
