harabara font a lado del perro

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="col-12 col-lg-5 offset-lg-1">
                     <div class="box_one">
                         <p class="title wow jackInTheBox">Conoce la nueva <br />
-                            línea <span class="primary-color">Cani-Tabs <i class="copy">®</i></span></p>
+                            línea <span class="primary-color"><span class="harabara">Cani-Tabs</span> <i class="copy">®</i></span></p>
                         <p class="sub_title wow bounceIn" data-wow-delay="1s">Sé complice de sus aventuras</p>
                         <p class="description wow jackInTheBox" data-wow-delay="1.5s">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
