cambios en el enlace

--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
                     <ul class="address">
                         <li class="location"><span class="sprite_layout"></span>Av. Canadá 3792, Lima 30, Perú.</li>
                         <li class="phone"><span class="sprite_layout"></span>(511) 2 300 300</li>
-                        <li class="email"><span class="sprite_layout"></span><a href="mailto:ventas@agrovetmarket.com">ventas@agrovetmarket.com</a></li>
+                        <li class="email"><span class="sprite_layout"></span><b><a href="mailto:ventas@agrovetmarket.com">ventas@agrovetmarket.com</a></b></li>
                     </ul>
                     <div class="clear"></div>
                     <h2 class="uppercase" style="margin:30px auto 0">Facturación Electrónica</h2>
@@ -854,9 +854,9 @@
         crossorigin="anonymous"></script>
     <script src='js/snowfall.jquery.min.js'></script>
     <script>
-        $("#content-huesos").snowfall({image :"img/hueso_t1.png", minSize: 300, maxSize:350 , flakeCount : 3, maxSpeed : 1});
+        $("#content-huesos").snowfall({image :"img/hueso_t1.png", minSize: 300, maxSize:350 , flakeCount : 5, maxSpeed : 1});
         $("#content-huesos").snowfall({image :"img/hueso_t2.png", minSize: 30, maxSize:100 , flakeCount : 20, maxSpeed : 3});
-        $("#content-huesos").snowfall({image :"img/hueso_t3.png", minSize: 100, maxSize:200 , flakeCount : 3, maxSpeed : 2});
+        $("#content-huesos").snowfall({image :"img/hueso_t3.png", minSize: 100, maxSize:200 , flakeCount : 5, maxSpeed : 2});
         $("#content-huesos").snowfall({image :"img/hueso_t4.png", minSize: 100, maxSize:200 , flakeCount : 5, maxSpeed : 2});
     </script>
     <script src="js/wow.min.js"></script>
