--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/canitabs.css">
     <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/hover-min.css">
 
 </head>
 
@@ -58,7 +59,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </div>        
     </nav>
     <div class="collapse" id="products-list-navbar">
         <div class="card card-body col-12 col-lg-7 m-auto">
@@ -79,6 +80,8 @@
             </ul>
         </div>
     </div>
+    
+
     <!-- SECTION 1 -->
     <section id="section_1">
         <div id="content-huesos"></div>
@@ -313,14 +316,14 @@
                         <div class="col-4 one d-none d-lg-block">
                             <div>
                                 <div class="item">
-                                    <img class="wow rotateInDownRight" data-wow-delay="2s" src="img/frasco_s3_1.png"
+                                    <img class="wow rotateInDownRight hvr-bounce-in" data-wow-delay="2s" src="img/frasco_s3_1.png"
                                         alt="">
-                                    <h6>Small Breeds</h6>
+                                    <h6 class="wow rotateInDownRight" data-wow-delay="2s">Small Breeds</h6>
                                 </div>
                                 <div class="item">
-                                    <img class="wow rotateInDownRight" data-wow-delay="3s" src="img/frasco_s3_2.png"
+                                    <img class="wow rotateInDownRight hvr-bounce-in" data-wow-delay="3s" src="img/frasco_s3_2.png"
                                         alt="">
-                                    <h6>Medium&Large Breeds</h6>
+                                    <h6 class="wow rotateInDownRight" data-wow-delay="3s">Medium&Large Breeds</h6>
                                 </div>
                             </div>
                         </div>
@@ -373,7 +376,7 @@
                             </ul>
                         </div>
                         <div class="col-3 item d-none d-lg-block">
-                            <img class="wow bounceInRight" data-wow-delay="1.5s" src="img/cápsula_s4_1.png" alt="">
+                            <img class="wow bounceInRight hvr-bounce-in" data-wow-delay="1.5s" src="img/cápsula_s4_1.png" alt="">
                             <div class="description wow fadeInLeft" data-wow-delay="2s">
                                 El EPA y el DHA trabajan en conjunto para promover una buena salud en cada etapa.
                             </div>
@@ -471,7 +474,7 @@
                                     </ul>
                                 </div>
                                 <div class="col-3 item d-none d-lg-block">
-                                    <img class="wow fadeInLeft" data-wow-delay="2.8s" data-wow-duration=".5s" src="img/frasco_s5_1.png"
+                                    <img class="wow fadeInLeft hvr-bounce-in" data-wow-delay="2.8s" data-wow-duration=".5s" src="img/frasco_s5_1.png"
                                         alt="">
                                 </div>
                             </div>
@@ -500,7 +503,7 @@
                             <!-- 1 -->
                             <div class="box row">
                                 <div class="col-3 item d-none d-lg-block">
-                                    <img class="wow fadeInLeft" data-wow-duration=".8s" data-wow-delay="1.5s" src="img/frasco_s6_2.png"
+                                    <img class="wow fadeInLeft hvr-bounce-in" data-wow-duration=".8s" data-wow-delay="1.5s" src="img/frasco_s6_2.png"
                                         alt="">
                                 </div>
                                 <div class="col-12 col-lg-8">
@@ -592,7 +595,7 @@
                                     </ul>
                                 </div>
                                 <div class="col-3 item d-none d-lg-block">
-                                    <img class="wow zoomIn" data-wow-delay=".8s" data-wow-duration=".5s" src="img/frasco_s7_1.png"
+                                    <img class="wow zoomIn hvr-bounce-in" data-wow-delay=".8s" data-wow-duration=".5s" src="img/frasco_s7_1.png"
                                         alt="">
                                 </div>
                             </div>
@@ -666,7 +669,7 @@
                                     </ul>
                                 </div>
                                 <div class="col-12 col-lg-3 item">
-                                    <img class="frasco wow zoomIn" data-wow-duration=".5s" src="img/frasco_s8_1.png"
+                                    <img class="frasco wow zoomIn hvr-bounce-in" data-wow-duration=".5s" src="img/frasco_s8_1.png"
                                         alt="">
                                     <div class="characters">
                                         <div class="letter">
