--- a/index.html
+++ b/index.html
@@ -204,29 +204,29 @@
                     <ul class="row">
                         <div class="col-12 col-lg-6">
                             <li>
-                                <div class="icon"><img src="img/more_section_1.png" alt=""></div>
+                                <div class="icon first"><img src="img/more_section_1.png" alt=""></div>
                                 <div class="text">Desarrollo y mantenimiento adecuado para tu mascota</div>
                             </li>
                             <li>
-                                <div class="icon"><img src="img/more_section_2.png" alt=""></div>
+                                <div class="icon first"><img src="img/more_section_2.png" alt=""></div>
                                 <div class="text">Promueve el bienestar general</div>
                             </li>
                             <li>
-                                <div class="icon"><img src="img/more_section_3.png" alt=""></div>
+                                <div class="icon first"><img src="img/more_section_3.png" alt=""></div>
                                 <div class="text">Pelaje briloso y suave</div>
                             </li>
                         </div>
                         <div class="col-12 col-lg-6">
                             <li>
-                                <div class="icon"><img src="img/more_section_4.png" alt=""></div>
+                                <div class="icon second"><img src="img/more_section_4.png" alt=""></div>
                                 <div class="text">Mayor vitalidad y energía
                             </li>
                             <li class="pt-4">
-                                <div class="icon"><img src="img/more_section_5.png" alt=""></div>
+                                <div class="icon second"><img src="img/more_section_5.png" alt=""></div>
                                 <div class="text">Balance nutricional en cada etapa</div>
                             </li>
                             <li>
-                                <div class="icon"><img src="img/more_section_6.png" alt=""></div>
+                                <div class="icon second"><img src="img/more_section_6.png" alt=""></div>
                                 <div class="text">Fácil administración por su delicioso sabor a hígado</div>
                             </li>
                         </div>
@@ -355,7 +355,7 @@
                             <ul class="wow fadeInDown">
                                 <li>
                                     <div class="icon"><img src="img/share_icon_s4_1.png" alt=""></div>
-                                    <div class="text">Estimula el sistema inmunológicor</div>
+                                    <div class="text">Estimula el sistema inmunológico</div>
                                 </li>
                                 <hr>
                                 <li>
@@ -378,7 +378,7 @@
                         <div class="col-3 item d-none d-lg-block">
                             <img class="wow bounceInRight hvr-bounce-in" data-wow-delay="1.5s" src="img/cápsula_s4_1.png" alt="">
                             <div class="description wow fadeInLeft" data-wow-delay="2s">
-                                El EPA y el DHA trabajan en conjunto para promover una buena salud en cada etapa.
+                                El <b>EPA</b> y el <b>DHA</b> trabajan en conjunto para promover una buena salud en cada etapa.
                             </div>
                         </div>
                     </div>
