--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <div class="content">
                             <div class="flask">
                                 <img class="dog wow zoomIn" src="img/perro_cachorro.png" alt="">
-                                <img class="flk wow lightSpeedIn" data-wow-delay=".5s" src="img/frasco_cachorro.png"
+                                <img class="flk wow bounceInRight" data-wow-delay=".5s" src="img/frasco_cachorro.png"
                                     alt="">
                             </div>
                             <img class="flag wow jackInTheBox" data-wow-delay="1s" src="img/flag_cachorro.png" alt="">
@@ -157,7 +157,7 @@
                         <div class="content">
                             <div class="flask">
                                 <img class="dog wow zoomIn" data-wow-delay="2s" src="img/perro_adulto.png" alt="">
-                                <img class="flk wow lightSpeedIn" data-wow-delay="2s" src="img/frasco_adulto.png" alt="">
+                                <img class="flk wow bounceInRight" data-wow-delay="2s" src="img/frasco_adulto.png" alt="">
                             </div>
                             <img class="flag wow jackInTheBox" data-wow-delay="2.5s" src="img/flag_adulto.png" alt="">
                             <div class="subtitle wow bounceIn" data-wow-delay="3s">Actividad y performance</div>
@@ -174,7 +174,7 @@
                         <div class="content">
                             <div class="flask">
                                 <img class="dog wow zoomIn" data-wow-delay="3.5s" src="img/perro_senior.png" alt="">
-                                <img class="flk wow lightSpeedIn" data-wow-delay="4s" src="img/frasco_senior.png" alt="">
+                                <img class="flk wow bounceInRight" data-wow-delay="4s" src="img/frasco_senior.png" alt="">
                             </div>
                             <img class="flag wow jackInTheBox" data-wow-delay="4s" src="img/flag_senior.png" alt="">
                             <div class="subtitle wow bounceIn" data-wow-delay="4.2s">Vitalidad y bienestar</div>
@@ -315,13 +315,13 @@
                         </div>
                         <div class="col-4 one d-none d-lg-block">
                             <div>
-                                <div class="item">
-                                    <img class="wow rotateInDownRight hvr-bounce-in" data-wow-delay="2s" src="img/frasco_s3_1.png"
+                                <div class="item hvr-bounce-in" style="z-index: 9999;">
+                                    <img class="wow rotateInDownRight" data-wow-delay="2s" src="img/frasco_s3_1.png"
                                         alt="">
                                     <h6 class="wow rotateInDownRight" data-wow-delay="2s">Small Breeds</h6>
                                 </div>
-                                <div class="item">
-                                    <img class="wow rotateInDownRight hvr-bounce-in" data-wow-delay="3s" src="img/frasco_s3_2.png"
+                                <div class="item hvr-bounce-in">
+                                    <img class="wow rotateInDownRight" data-wow-delay="3s" src="img/frasco_s3_2.png"
                                         alt="">
                                     <h6 class="wow rotateInDownRight" data-wow-delay="3s">Medium&Large Breeds</h6>
                                 </div>
@@ -736,7 +736,6 @@
                         <img class="wow bounceInRight" data-wow-duration=".8s" data-wow-delay="4.5s" src="img/frasco 60 caps-6.png"
                             alt="">
                     </div>
-                    <img src="img/hueso.png" alt="" class="hueso float-right">
                 </div>
                 <div class="col-12 col-lg-10 m-auto">
                     <div class="tags">
@@ -976,8 +975,8 @@
     <script>
         $("#content-huesos").snowfall({
             image: "img/hueso_t1.png",
-            minSize: 300,
-            maxSize: 350,
+            minSize: 100,
+            maxSize: 250,
             flakeCount: 2,
             maxSpeed: 1
         });
