--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
                         <a class="nav-link" href="#">Síguenos</a>
                     </li>
                     <li class="social-item">
-                        <a href="#"><img src="img/icon_fb.png" alt=""></a>
-                        <a href="#"><img src="img/icon_home.png" alt=""></a>
+                        <a href="#"><img src="img/icon_fb.png" alt="" title="Facebook"></a>
+                        <a href="#"><img src="img/icon_home.png" alt="" title="Inicio"></a>
+                        <a href="#"><img src="img/icon_hma.png" alt="" title="AMAH"></a>
                     </li>
                 </ul>
             </div>
@@ -93,9 +94,10 @@
                             línea <span class="primary-color"><span class="harabara">Cani</span><span class="harabara pl-1_25">-Tabs</span> <i class="copy">®</i></span></p>
                         <p class="sub_title wow bounceIn" data-wow-delay="1s">Sé complice de sus aventuras</p>
                         <p class="description wow jackInTheBox" data-wow-delay="1.5s">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br>
-                            Duis quis erat vitae nibh vulputate lacinia at nec orci. Aenean<br>
-                            auctor, erat quis ornare iaculis, erat velit tempor ante, a cursus.
+                            Una nutrición adecuada y equilibrada proporciona la energía que tu mascota necesita todos los días, además de promover y mantener la salud. Conoce nuestra nueva gama de productos nutricionales, que serán un gran aliado en la vitalidad de tu mejor amigo.
+                        </p>
+                        <p>
+                            <br><a class="btn btn-default wow jackInTheBox new-button" data-wow-delay="2s" href="#section_2">Ver más</a>
                         </p>
                     </div>
                 </div>
@@ -188,7 +190,7 @@
             </div>
             <div class="row mt-5">
                 <div class="col-12 col-lg-4 text-center m-auto">
-                    <a class="btn btn-default show-more-click" href="#" data-direction="up" data-idDiv="#section_2_more">Ver
+                    <a class="btn btn-default show-more-click new-button" href="#section_2_more" data-direction="up" data-idDiv="#section_2_more">Ver
                         más</a>
                     <a class="downloads pdf" href="#">&nbsp;</a>
                     <a class="downloads video" href="#" data-toggle="modal" data-target="#section_2_modal"></a>
@@ -368,7 +370,7 @@
                                     <div class="text">Refuerza el sistema neurológico</div>
                                 </li>
                                 <li>
-                                    <a href="#" class="btn btn-yellow show-more-click" data-direction="up" data-idDiv="#section_4_more">Ver
+                                    <a href="#section_4_more" class="btn btn-yellow show-more-click new-button" data-direction="up" data-idDiv="#section_4_more">Ver
                                         más</a>
                                     <a class="downloads pdf" href="#">&nbsp;</a>
                                     <a class="downloads video" href="#"></a>
@@ -378,7 +380,7 @@
                         <div class="col-3 item d-none d-lg-block">
                             <img class="wow bounceInRight hvr-bounce-in" data-wow-delay="1.5s" src="img/cápsula_s4_1.png" alt="">
                             <div class="description wow fadeInLeft" data-wow-delay="2s">
-                                El <b>EPA</b> y el <b>DHA</b> trabajan en conjunto para promover una buena salud en cada etapa.
+                                El <b class="goodtime">EPA</b> y el <b  class="goodtime">DHA</b> trabajan en conjunto para promover una buena salud en cada etapa.
                             </div>
                         </div>
                     </div>
@@ -391,7 +393,7 @@
             <div class="row">
                 <div class="col-12 col-lg-9 m-auto">
                     <ul class="row">
-                        <div class="col-12 col-lg-5">
+                        <div class="col-12 col-lg-6">
                             <li>
                                 <div class="icon"><img src="img/escudo_icon.png" alt=""></div>
                                 <div class="text">Aliado en cuadros de dermatitis</div>
@@ -405,12 +407,12 @@
                                 <div class="text">Disminuye el estrés</div>
                             </li>
                         </div>
-                        <div class="col-12 col-lg-7">
+                        <div class="col-12 col-lg-6">
                             <li>
-                                <div class="icon"><img src="img/dog_icon.png" alt=""></div>
+                                <div class="icon" style="margin-left: -31px;"><img src="img/dog_icon.png" alt=""></div>
                                 <div class="text">Evita malformaciones durante las gestaciones</div>
                             </li>
-                            <li class="pt-4">
+                            <li>
                                 <div class="icon"><img src="img/check_icon.png" alt=""></div>
                                 <div class="text">Estimula la regeneración de la piel</div>
                             </li>
@@ -716,25 +718,16 @@
             <div class="row">
                 <div class="col-12">
                     <div class="frascos">
-                        <img class="wow bounceInLeft" data-wow-duration=".8s" data-wow-delay="4s" class="wow" src="img/frasco 100 caps.png"
-                            alt="">
-                        <img class="wow bounceInLeft" data-wow-duration=".8s" data-wow-delay="3s" src="img/frasco 60 caps copia.png"
-                            alt="">
-                        <img class="wow bounceInLeft" data-wow-duration=".8s" data-wow-delay="2s" src="img/frasco 60 caps.png"
-                            alt="">
-                        <img class="wow bounceInLeft" data-wow-duration=".8s" data-wow-delay="1s" src="img/frasco 60 caps-1.png"
-                            alt="">
-                        <img class="wow bounceInLeft" data-wow-duration=".8s" src="img/frasco 100 caps-1.png" alt="">
-                        <img class="wow bounceInRight" data-wow-duration=".8s" data-wow-delay=".5s" src="img/frasco 60 caps-2.png"
-                            alt="">
-                        <img class="wow bounceInRight" data-wow-duration=".8s" data-wow-delay="1.5s" src="img/frasco 60 caps-3.png"
-                            alt="">
-                        <img class="wow bounceInRight" data-wow-duration=".8s" data-wow-delay="2.5s" src="img/frasco 60 caps-4.png"
-                            alt="">
-                        <img class="wow bounceInRight" data-wow-duration=".8s" data-wow-delay="3.5s" src="img/frasco 60 caps-5.png"
-                            alt="">
-                        <img class="wow bounceInRight" data-wow-duration=".8s" data-wow-delay="4.5s" src="img/frasco 60 caps-6.png"
-                            alt="">
+                        <a href="#section_2" class="new-button"><img class="wow bounceInLeft" data-wow-duration=".8s" data-wow-delay="4s" class="wow" src="img/frasco 100 caps.png" alt=""></a>
+                        <a href="#section_2" class="new-button"><img class="wow bounceInLeft" data-wow-duration=".8s" data-wow-delay="3s" src="img/frasco 60 caps copia.png" alt=""></a>
+                        <a href="#section_2" class="new-button"><img class="wow bounceInLeft" data-wow-duration=".8s" data-wow-delay="2s" src="img/frasco 60 caps.png" alt=""></a>
+                        <a href="#section_3" class="new-button"><img class="wow bounceInLeft" data-wow-duration=".8s" data-wow-delay="1s" src="img/frasco 60 caps-1.png" alt=""></a>
+                        <a href="#section_3" class="new-button"><img class="wow bounceInLeft" data-wow-duration=".8s" src="img/frasco 100 caps-1.png" alt=""></a>
+                        <a href="#section_4" class="new-button"><img class="wow bounceInRight" data-wow-duration=".8s" data-wow-delay=".5s" src="img/frasco 60 caps-2.png" alt=""></a>
+                        <a href="#section_5" class="new-button"><img class="wow bounceInRight" data-wow-duration=".8s" data-wow-delay="1.5s" src="img/frasco 60 caps-3.png" alt=""></a>
+                        <a href="#section_6" class="new-button"><img class="wow bounceInRight" data-wow-duration=".8s" data-wow-delay="2.5s" src="img/frasco 60 caps-4.png" alt=""></a>
+                        <a href="#section_7" class="new-button"><img class="wow bounceInRight" data-wow-duration=".8s" data-wow-delay="3.5s" src="img/frasco 60 caps-5.png" alt=""></a>
+                        <a href="#section_8" class="new-button"><img class="wow bounceInRight" data-wow-duration=".8s" data-wow-delay="4.5s" src="img/frasco 60 caps-6.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-12 col-lg-10 m-auto">
