--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-6 copyright">2018 Agrovet Market Animal Health Todos los derechos reservados</div>
+                <div class="col-8 col-lg-6 copyright">2018 Agrovet Market Animal Health Todos los derechos reservados</div>
             </div>
         </div>
     </div>
@@ -971,28 +971,32 @@
             minSize: 100,
             maxSize: 250,
             flakeCount: 2,
-            maxSpeed: 1
+            maxSpeed: 1,
+            flakeIndex: 9999
         });
         $("#content-huesos").snowfall({
             image: "img/hueso_t2.png",
             minSize: 30,
             maxSize: 100,
             flakeCount: 10,
-            maxSpeed: 3
+            maxSpeed: 3,
+            flakeIndex: 9999
         });
         $("#content-huesos").snowfall({
             image: "img/hueso_t3.png",
             minSize: 100,
             maxSize: 200,
             flakeCount: 3,
-            maxSpeed: 2
+            maxSpeed: 2,
+            flakeIndex: 9999
         });
         $("#content-huesos").snowfall({
             image: "img/hueso_t4.png",
             minSize: 100,
             maxSize: 200,
             flakeCount: 3,
-            maxSpeed: 2
+            maxSpeed: 2,
+            flakeIndex: 9999
         });
     </script>
     <script src="js/wow.min.js"></script>
