--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
     <div class="footer bgfooter">
         <div class="container">
             <div class="row">
-                <div class="col-6 col-lg-3">
+                <div class="col-12 col-md-6 col-lg-3">
                     <h2 class="uppercase">Información</h2>
                     <ul class="address">
                         <li class="location"><span class="sprite_layout"></span>Av. Canadá 3792, Lima 30, Perú.</li>
@@ -878,7 +878,7 @@
                                 Nacionales</a></li>
                     </ul>
                 </div>
-                <div class="col-6 col-lg-3">
+                <div class="col-12 col-md-6 col-lg-3">
                     <h2>AGROVET MARKET</h2>
                     <ul class="linkdirectos">
                         <li><span class="sprite_layout"></span><a href="/agrovetmarket/productos-veterinarios-agrovet-market">Agrovet
@@ -897,7 +897,7 @@
                         <li><span class="sprite_layout"></span><a href="/politicas-de-cookies">Política de cookies</a></li>
                     </ul>
                 </div>
-                <div class="col-6 col-lg-3">
+                <div class="col-12 col-md-6 col-lg-3">
                     <h2 class="uppercase">Links de interés</h2>
                     <ul class="linkdirectos">
                         <li><span class="sprite_layout"></span><a href="http://www.hematofos.com/" target="_blank">Hematofos
@@ -920,7 +920,7 @@
                             </a></li>
                     </ul>
                 </div>
-                <div class="col-6 col-lg-3">
+                <div class="col-12 col-md-6 col-lg-3">
                     <h2 class="uppercase">Síguenos en</h2>
                     <ul class="redesociales">
                         <li> <a target="_blank" class="sprite_layout facebook" href="http://www.facebook.com/Agrovetmarket">facebook</a></li>
