--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <a class="nav-link hideMenu" href="#section_10">Contáctanos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Síguenos</a>
+                        <a class="nav-link" href="#"><span class="d-none d-md-block">Síguenos</span></a>
                     </li>
                     <li class="social-item">
                         <a href="#"><img src="img/icon_fb.png" alt="" title="Facebook"></a>
